tests/snapshots/snapshot_tests__snapshot_ir_message_assistant.snap
---
source: tests/snapshot_tests.rs
expression: msg
---
{
  "role": "assistant",
  "content": [
    {
      "type": "text",
      "text": "I'll help you fix that bug."
    }
  ]
}
