tests/snapshots/snapshot_tests__snapshot_ir_message_system.snap
---
source: tests/snapshot_tests.rs
expression: msg
---
{
  "role": "system",
  "content": [
    {
      "type": "text",
      "text": "You are a helpful coding assistant."
    }
  ]
}
