tests/snapshots/snapshot_tests__snapshot_ir_message_text.snap
---
source: tests/snapshot_tests.rs
expression: msg
---
{
  "role": "user",
  "content": [
    {
      "type": "text",
      "text": "Hello, assistant!"
    }
  ]
}
