tests/snapshots/snapshot_tests__snapshot_ir_message_tool_role.snap
---
source: tests/snapshot_tests.rs
expression: msg
---
{
  "role": "tool",
  "content": [
    {
      "type": "tool_result",
      "tool_use_id": "tu_100",
      "content": [
        {
          "type": "text",
          "text": "file contents here"
        }
      ],
      "is_error": false
    }
  ]
}
