tests/snapshots/snapshot_tests__snapshot_ir_message_with_metadata.snap
---
source: tests/snapshot_tests.rs
expression: msg
---
{
  "role": "assistant",
  "content": [
    {
      "type": "text",
      "text": "with metadata"
    }
  ],
  "metadata": {
    "vendor_id": "msg-abc123"
  }
}
