tests/snapshots/snapshot_tests__snapshot_ir_tool_definition_no_params.snap
---
source: tests/snapshot_tests.rs
expression: td
---
{
  "name": "list_files",
  "description": "List files in the workspace",
  "parameters": {
    "properties": {},
    "type": "object"
  }
}
