tests/snapshots/snapshot_tests__snapshot_negotiation_result_all_native.snap
---
source: tests/snapshot_tests.rs
expression: r
---
{
  "native": [
    "streaming",
    "tool_use"
  ],
  "emulated": [],
  "unsupported": []
}
