tests/snapshots/snapshot_tests__snapshot_negotiation_result_mixed.snap
---
source: tests/snapshot_tests.rs
expression: r
---
{
  "native": [
    "streaming"
  ],
  "emulated": [
    [
      "extended_thinking",
      "client_side"
    ]
  ],
  "unsupported": [
    [
      "mcp_server",
      "not available"
    ]
  ]
}
