tests/snapshots/snapshot_tests__snapshot_policy_profile_empty.snap
---
source: tests/snapshot_tests.rs
expression: "PolicyProfile::default()"
---
{
  "allowed_tools": [],
  "disallowed_tools": [],
  "deny_read": [],
  "deny_write": [],
  "allow_network": [],
  "deny_network": [],
  "require_approval_for": []
}
