tests/snapshots/snapshot_tests__snapshot_policy_profile_full.snap
---
source: tests/snapshot_tests.rs
expression: p
---
{
  "allowed_tools": [
    "read",
    "write",
    "edit"
  ],
  "disallowed_tools": [
    "bash"
  ],
  "deny_read": [
    ".env",
    "secrets/**"
  ],
  "deny_write": [
    "Cargo.lock"
  ],
  "allow_network": [
    "api.example.com"
  ],
  "deny_network": [
    "*.malware.com"
  ],
  "require_approval_for": [
    "delete",
    "exec"
  ]
}
